increased parallax effect and added localization variables

--- a/layouts/partials/brick_events.html
+++ b/layouts/partials/brick_events.html
@@ -57,7 +57,7 @@
                             {{ end }}
 
                             <p>{{ $eventDetails | truncate 140 }}...</p>
-                            <p><a href="{{ .RelPermalink }}" class="button secondary smaller">{{ i18n "Read more" }}</a></p>
+                            <p><a href="{{ .RelPermalink }}" class="button secondary smaller">{{ i18n "Event Details" }}</a></p>
                         </div>
                 </li>
             {{ end }}
