--- a/static/css/date-icons.css
+++ b/static/css/date-icons.css
@@ -1,4 +1,6 @@
-/* Date Icon Styles */
+/* ===============================
+   0. DATE ICONS
+   =============================== */
 .date-icon-container {
   display: inline-flex;
   align-items: center;
