--- a/layouts/shortcodes/parallax_image.html
+++ b/layouts/shortcodes/parallax_image.html
@@ -31,7 +31,7 @@
 </style>
 
 <div class="parallax-section">
-  <div data-react-parallax data-src="{{ $src }}" data-alt="{{ $alt }}" data-height="100%" data-scale="{{ $scale }}" data-bobbing="{{ $bobbing }}" class="react-parallax-container" style="overflow: hidden; position: relative; height: 100%; width: 100%;"></div>
+  <div data-react-parallax data-src="{{ $src }}" data-alt="{{ $alt }}" data-height="100%" data-scale="{{ $scale }}" data-bobbing="{{ $bobbing }}" class="react-parallax-container" style="overflow: visible; position: relative; height: 100%; width: 100%;"></div>
   <script src="/js/parallax-bundle.js"></script>
   
   {{ if $hasOverlay }}
