--- a/layouts/partials/bobbing_parallax.html
+++ b/layouts/partials/bobbing_parallax.html
@@ -1,16 +1,16 @@
 <!-- Bobbing parallax image partial -->
 <div class="parallax-section" style="position: relative; overflow: visible; z-index: 0;">
-  <div style="position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%);">
+  <div style="position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%);height: 100%;overflow:visible;top:-50%;">
     <div data-react-parallax 
          data-src="/uploads/waterway-cleanups/bobber.png" 
          data-alt="Bobber" 
          data-height="200px" 
          data-width="200px" 
-         data-scale="1.4" 
+         data-scale="1.6" 
          data-bobbing="true"
          data-speed="0.5"
          class="react-parallax-container" 
-         style="width: 200px; height: 200px; position: relative;">
+         style="width: 200px; height: 200px; top:-10px;position: relative;height: 100%;overflow:visible;">
     </div>
     <script src="/js/parallax-bundle.js"></script>
   </div>
