--- a/static/css/waterway-cleanups.css
+++ b/static/css/waterway-cleanups.css
@@ -2,7 +2,7 @@
    0. VARIABLES
    =============================== */
    :root {  
-      
+      --margin-top-section: 5rem;
    }
 
 /* ===============================
@@ -22,54 +22,8 @@
       font-size: 18px;
   }
 
-/* ===============================
-   2. BUTTONS  
-   =============================== */
-   .button:not(.secondary), button:not(.secondary) {
-      color: var(--teal-blue);
-   }
-
-   .bgimage .button, button {
-      color: var(--teal-blue);
-      font-size: 1.1rem;
-  }
-
-   .button.secondary {
-      color: var(--granny-smith-apple-green);
-      background-color: var(--teal-blue);
-   }
-
-/* ===============================
-   3. PRE-HEADER
-   =============================== */
-   .preheader {
-      background-color: var(--genoa-green);
-      font-size: 16px;
-      text-align: center;
-   }
-
-   .preheader, .preheader a {
-      color: #b9e597;
-   }
-
-   .preheader .container {
-      display: flex;
-      justify-content: center;
-   }
-
-   .preheader .container > div {
-      text-align: center;
-   }
-
-/* ===============================
-   4. SECTIONS  
-   =============================== */
-   body:not(.transparent_header) header + section.bgimage .container {
-      padding-top: 16rem !important;
-  }
-  
-/* ===============================
-   4. NAVIGATION   
+  /* ===============================
+   2. NAVIGATION   
    =============================== */
    header.dark {
       background-color: var(--eden-green);
@@ -90,15 +44,24 @@
    header .logo svg {
       width: 160px;
    }
+   
+   h1, .h1 {
+      color: var(--teal-blue);
+      margin-bottom: 1.25rem;
+   }
+
+   h1 + p, .h1 + p {
+      margin-top: 0;
+   }
+
+   h2, .h2 {
+      color: var(--teal-blue);
+   }
 
    h3, .h3 {
       font-family: var(--fontSubTitles);
       font-size: 22px;
       font-weight: 600;
-      color: var(--teal-blue);
-   }
-
-   h2, .h2 {
       color: var(--teal-blue);
    }
 
@@ -123,7 +86,99 @@
   }
 
 /* ===============================
-   5. HERO
+   3. BUTTONS  
+   =============================== */
+   .button:not(.secondary), button:not(.secondary) {
+      color: var(--teal-blue);
+   }
+
+   .bgimage .button, button {
+      color: var(--teal-blue);
+      font-size: 1.1rem;
+  }
+
+   .button.secondary {
+      color: var(--granny-smith-apple-green);
+      background-color: var(--teal-blue);
+   }
+
+/* ===============================
+   4. PRE-HEADER
+   =============================== */
+   .preheader {
+      background-color: var(--genoa-green);
+      font-size: 16px;
+      text-align: center;
+   }
+
+   .preheader, .preheader a {
+      color: #b9e597;
+   }
+
+   .preheader .container {
+      display: flex;
+      justify-content: center;
+   }
+
+   .preheader .container > div {
+      text-align: center;
+   }
+
+/* ===============================
+   5. SECTIONS
+   =============================== */
+   body:not(.transparent_header) header + section.bgimage .container {
+      padding-top: 16rem !important;
+   }
+
+   body section:not(.hasbackgroundcolor) + section:not(.hasbackgroundcolor) {
+      padding-top: 5rem;
+   }  
+
+   section.two-columns-section {
+      padding-top: 7rem !important;
+      padding-bottom: 7rem !important;
+   }
+
+   @media only screen and (min-width: 768px) {
+      section.two-columns-section .container.twocols .text:first-child {
+         border-right: 1px solid var(--pearl-bush-white);
+      }
+   }
+
+   section .twocols > div {
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: center;
+  }
+
+  section.two-columns-section .container.twocols .image-gallery {
+         text-align: center;
+         gap: 0.5rem;
+         align-items: center;
+         justify-content: center;
+         align-content: center;
+         justify-items: center;
+         display: flex;
+         flex-wrap: wrap;
+   }
+
+
+   section.two-columns-section .container.twocols .image-gallery li {
+      list-style: none;
+      padding: 20px;
+      max-width: 230px;
+  }
+
+  @media only screen and (max-width: 767px) {
+   section.two-columns-section .container.twocols .image-gallery li {
+      max-width: 33%;
+   }
+}
+
+/* ===============================
+   6. HERO
    =============================== */
    #hero h1 {
       font-size: 3.5rem;
@@ -150,7 +205,7 @@
    }
 
 /* ===============================
-   6. UTILITIES
+   7. UTILITIES
    =============================== */
    section.bgimage .overlay {
       background: #000000;
@@ -170,7 +225,7 @@
    }
 
 /* ===============================
-   7. POSTS
+   8. POSTS
    =============================== */
    .posts {
       background-color: var(--pearl-bush-white);
@@ -184,12 +239,13 @@
       padding: 7rem 0 7rem 0;
    }
 
-   .posts + .cta {
-      
-   }
-   
+   section.posts .filter select {
+      background: var(--eden-green);
+      color: var(--pearl-bush-white);
+  }
+
 /* ===============================
-   8. FOOTER
+   9. FOOTER
    =============================== */ 
    footer {
       position: relative;
@@ -247,6 +303,6 @@
    }
    
 /* ===============================
-   9. MEDIA QUERIES
+   10. MEDIA QUERIES
    =============================== */
 
