--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -7,7 +7,18 @@
     <meta name="description" content="{{ if .Params.seo.description }}{{ .Params.seo.description }}{{ else }}{{ .Summary }}{{ end }}">
 
     <link rel="canonical" href="{{ .Permalink }}" />
+
+    {{/* Trey -- Removing this reference to the favicon image in favor of the new approach
     <link rel="shortcut icon" href="{{ .Site.Data.settings.favicon_image }}">
+    */}}
+
+    {{/* Trey -- Adding the favicon image for maximum support across devices */}}
+    <link rel="icon" type="image/png" href="/uploads/branding/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="/uploads/branding/favicon.svg" />
+    <link rel="shortcut icon" href="/uploads/branding/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/uploads/branding/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="Waterway Cleanups" />
+    <link rel="manifest" href="/uploads/branding/site.webmanifest" />
     
     {{- $color := "style" -}}
     {{- if .Params.color_name -}}{{- $color = .Params.color_name -}}{{- end -}}
