Added new cleanup placeholders for the rest of the year.
Also made the banner text dynamic

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -58,7 +58,7 @@
           {{- end -}}
         </div>
         <div>
-          {{- if (index .Site.Data .Language.Lang).header.preheader -}}{{ (index .Site.Data .Language.Lang).header.preheader }}{{- end -}}
+          {{- partial "next_event_preheader.html" . -}}
         </div>
       </div>  
     </div>
