Vibe coding volunteer form

--- a/layouts/partials/head_custom.html
+++ b/layouts/partials/head_custom.html
@@ -7,5 +7,8 @@
     <!-- LineIcons -->
     <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
     
-    <!-- Custom Styles -->
-    <link rel="stylesheet" href="/css/date-icons.css">
+<!-- Custom Styles -->
+<link rel="stylesheet" href="/css/date-icons.css">
+
+<!-- Volunteer Form Handler -->
+<script src="/js/volunteer-form-handler.js"></script>
