Adding form endpoint for SES

--- a/layouts/partials/head_custom.html
+++ b/layouts/partials/head_custom.html
@@ -9,6 +9,7 @@
     
 <!-- Custom Styles -->
 <link rel="stylesheet" href="/css/date-icons.css">
+<link rel="stylesheet" href="/css/volunteer-form.css">
 
 <!-- Volunteer Form Handler -->
 <script src="/js/volunteer-form-handler.js"></script>
