--- a/static/css/tailwind-output.css
+++ b/static/css/tailwind-output.css
@@ -1,3 +1,6 @@
+/*!*************************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js!./node_modules/postcss-loader/dist/cjs.js!./static/css/src/tailwind.css ***!
+  \*************************************************************************************************************************/
 /*! tailwindcss v4.1.8 | MIT License | https://tailwindcss.com */
 @layer properties;
 @layer theme, base, components, utilities;
@@ -50,7 +53,9 @@
   html, :host {
     line-height: 1.5;
     -webkit-text-size-adjust: 100%;
-    tab-size: 4;
+    -moz-tab-size: 4;
+      -o-tab-size: 4;
+         tab-size: 4;
     font-family: var(--default-font-family, ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji");
     font-feature-settings: var(--default-font-feature-settings, normal);
     font-variation-settings: var(--default-font-variation-settings, normal);
@@ -142,10 +147,19 @@
   ::file-selector-button {
     margin-inline-end: 4px;
   }
+  ::-moz-placeholder {
+    opacity: 1;
+  }
   ::placeholder {
     opacity: 1;
   }
   @supports (not (-webkit-appearance: -apple-pay-button))  or (contain-intrinsic-size: 1px) {
+    ::-moz-placeholder {
+      color: currentcolor;
+      @supports (color: color-mix(in lab, red, red)) {
+        color: color-mix(in oklab, currentcolor 50%, transparent);
+      }
+    }
     ::placeholder {
       color: currentcolor;
       @supports (color: color-mix(in lab, red, red)) {
@@ -176,7 +190,9 @@
     box-shadow: none;
   }
   button, input:where([type="button"], [type="reset"], [type="submit"]), ::file-selector-button {
-    appearance: button;
+    -webkit-appearance: button;
+       -moz-appearance: button;
+            appearance: button;
   }
   ::-webkit-inner-spin-button, ::-webkit-outer-spin-button {
     height: auto;
@@ -192,7 +208,9 @@
     width: 100%;
     overflow: hidden;
     webkit-user-select: none;
-    user-select: none;
+    -webkit-user-select: none;
+       -moz-user-select: none;
+            user-select: none;
     direction: ltr;
     container-type: inline-size;
     grid-template-columns: auto 1fr;
@@ -240,13 +258,17 @@
     position: relative;
     display: inline-flex;
     cursor: pointer;
-    appearance: none;
+    -webkit-appearance: none;
+       -moz-appearance: none;
+            appearance: none;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
     text-align: center;
     webkit-user-select: none;
-    user-select: none;
+    -webkit-user-select: none;
+       -moz-user-select: none;
+            user-select: none;
     &:hover {
       @media (hover: hover) {
         color: var(--color-base-content);
@@ -268,6 +290,7 @@
     padding-inline-start: var(--tab-p);
     padding-inline-end: var(--tab-p);
     &:is(input[type="radio"]) {
+      min-width: -moz-fit-content;
       min-width: fit-content;
       &:after {
         content: attr(aria-label);
@@ -279,7 +302,9 @@
         position: absolute;
         inset: calc(0.25rem * 0);
         cursor: pointer;
-        appearance: none;
+        -webkit-appearance: none;
+           -moz-appearance: none;
+                appearance: none;
         opacity: 0%;
       }
     }
@@ -318,6 +343,7 @@
   }
   .menu {
     display: flex;
+    width: -moz-fit-content;
     width: fit-content;
     flex-direction: column;
     flex-wrap: wrap;
@@ -359,7 +385,9 @@
       transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
       grid-auto-columns: minmax(auto, max-content) auto max-content;
       text-wrap: balance;
-      user-select: none;
+      -webkit-user-select: none;
+         -moz-user-select: none;
+              user-select: none;
     }
     :where(li > details > summary) {
       --tw-outline-style: none;
@@ -571,10 +599,14 @@
     background-color: currentColor;
     vertical-align: middle;
     width: calc(var(--size-selector, 0.25rem) * 6);
-    mask-size: 100%;
-    mask-repeat: no-repeat;
-    mask-position: center;
-    mask-image: url("data:image/svg+xml,%3Csvg width='24' height='24' stroke='black' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cg transform-origin='center'%3E%3Ccircle cx='12' cy='12' r='9.5' fill='none' stroke-width='3' stroke-linecap='round'%3E%3CanimateTransform attributeName='transform' type='rotate' from='0 12 12' to='360 12 12' dur='2s' repeatCount='indefinite'/%3E%3Canimate attributeName='stroke-dasharray' values='0,150;42,150;42,150' keyTimes='0;0.475;1' dur='1.5s' repeatCount='indefinite'/%3E%3Canimate attributeName='stroke-dashoffset' values='0;-16;-59' keyTimes='0;0.475;1' dur='1.5s' repeatCount='indefinite'/%3E%3C/circle%3E%3C/g%3E%3C/svg%3E");
+    -webkit-mask-size: 100%;
+            mask-size: 100%;
+    -webkit-mask-repeat: no-repeat;
+            mask-repeat: no-repeat;
+    -webkit-mask-position: center;
+            mask-position: center;
+    -webkit-mask-image: url("data:image/svg+xml,%3Csvg width=%2724%27 height=%2724%27 stroke=%27black%27 viewBox=%270 0 24 24%27 xmlns=%27http://www.w3.org/2000/svg%27%3E%3Cg transform-origin=%27center%27%3E%3Ccircle cx=%2712%27 cy=%2712%27 r=%279.5%27 fill=%27none%27 stroke-width=%273%27 stroke-linecap=%27round%27%3E%3CanimateTransform attributeName=%27transform%27 type=%27rotate%27 from=%270 12 12%27 to=%27360 12 12%27 dur=%272s%27 repeatCount=%27indefinite%27/%3E%3Canimate attributeName=%27stroke-dasharray%27 values=%270,150;42,150;42,150%27 keyTimes=%270;0.475;1%27 dur=%271.5s%27 repeatCount=%27indefinite%27/%3E%3Canimate attributeName=%27stroke-dashoffset%27 values=%270;-16;-59%27 keyTimes=%270;0.475;1%27 dur=%271.5s%27 repeatCount=%27indefinite%27/%3E%3C/circle%3E%3C/g%3E%3C/svg%3E");
+            mask-image: url("data:image/svg+xml,%3Csvg width=%2724%27 height=%2724%27 stroke=%27black%27 viewBox=%270 0 24 24%27 xmlns=%27http://www.w3.org/2000/svg%27%3E%3Cg transform-origin=%27center%27%3E%3Ccircle cx=%2712%27 cy=%2712%27 r=%279.5%27 fill=%27none%27 stroke-width=%273%27 stroke-linecap=%27round%27%3E%3CanimateTransform attributeName=%27transform%27 type=%27rotate%27 from=%270 12 12%27 to=%27360 12 12%27 dur=%272s%27 repeatCount=%27indefinite%27/%3E%3Canimate attributeName=%27stroke-dasharray%27 values=%270,150;42,150;42,150%27 keyTimes=%270;0.475;1%27 dur=%271.5s%27 repeatCount=%27indefinite%27/%3E%3Canimate attributeName=%27stroke-dashoffset%27 values=%270;-16;-59%27 keyTimes=%270;0.475;1%27 dur=%271.5s%27 repeatCount=%27indefinite%27/%3E%3C/circle%3E%3C/g%3E%3C/svg%3E");
   }
   .invisible {
     visibility: hidden;
@@ -695,11 +727,15 @@
     display: inline-grid;
     flex-shrink: 0;
     cursor: pointer;
-    appearance: none;
+    -webkit-appearance: none;
+       -moz-appearance: none;
+            appearance: none;
     place-content: center;
     vertical-align: middle;
     webkit-user-select: none;
-    user-select: none;
+    -webkit-user-select: none;
+       -moz-user-select: none;
+            user-select: none;
     grid-template-columns: 0fr 1fr 1fr;
     --radius-selector-max: calc(
     var(--radius-selector) + var(--radius-selector) + var(--radius-selector)
@@ -726,7 +762,9 @@
       grid-row-start: 1;
       height: 100%;
       cursor: pointer;
-      appearance: none;
+      -webkit-appearance: none;
+         -moz-appearance: none;
+              appearance: none;
       background-color: transparent;
       padding: calc(0.25rem * 0.5);
       transition: opacity 0.2s, rotate 0.4s;
@@ -827,7 +865,9 @@
     position: relative;
     display: inline-flex;
     flex-shrink: 1;
-    appearance: none;
+    -webkit-appearance: none;
+       -moz-appearance: none;
+            appearance: none;
     align-items: center;
     gap: calc(0.25rem * 2);
     background-color: var(--color-base-100);
@@ -859,7 +899,9 @@
       display: inline-flex;
       height: 100%;
       width: 100%;
-      appearance: none;
+      -webkit-appearance: none;
+         -moz-appearance: none;
+              appearance: none;
       background-color: transparent;
       border: none;
       &:focus, &:focus-within {
@@ -896,6 +938,12 @@
       @supports (color: color-mix(in lab, red, red)) {
         color: color-mix(in oklab, var(--color-base-content) 40%, transparent);
       }
+      &::-moz-placeholder {
+        color: var(--color-base-content);
+        @supports (color: color-mix(in lab, red, red)) {
+          color: color-mix(in oklab, var(--color-base-content) 20%, transparent);
+        }
+      }
       &::placeholder {
         color: var(--color-base-content);
         @supports (color: color-mix(in lab, red, red)) {
@@ -924,6 +972,7 @@
   .indicator {
     position: relative;
     display: inline-flex;
+    width: -moz-max-content;
     width: max-content;
     :where(.indicator-item) {
       z-index: 1;
@@ -1104,7 +1153,9 @@
     }
   }
   .range {
-    appearance: none;
+    -webkit-appearance: none;
+       -moz-appearance: none;
+            appearance: none;
     webkit-appearance: none;
     --range-thumb: var(--color-base-100);
     --range-thumb-size: calc(var(--size-selector, 0.25rem) * 6);
@@ -1160,7 +1211,8 @@
       height: var(--range-thumb-size);
       width: var(--range-thumb-size);
       border: var(--range-p) solid;
-      appearance: none;
+      -webkit-appearance: none;
+              appearance: none;
       webkit-appearance: none;
       top: 50%;
       color: var(--range-progress);
@@ -1201,7 +1253,9 @@
     position: relative;
     display: inline-flex;
     flex-shrink: 1;
-    appearance: none;
+    -webkit-appearance: none;
+       -moz-appearance: none;
+            appearance: none;
     align-items: center;
     gap: calc(0.25rem * 1.5);
     background-color: var(--color-base-100);
@@ -1238,7 +1292,9 @@
       margin-inline-start: calc(0.25rem * -4);
       margin-inline-end: calc(0.25rem * -7);
       width: calc(100% + 2.75rem);
-      appearance: none;
+      -webkit-appearance: none;
+         -moz-appearance: none;
+              appearance: none;
       padding-inline-start: calc(0.25rem * 4);
       padding-inline-end: calc(0.25rem * 7);
       height: calc(100% - 2px);
@@ -1276,6 +1332,12 @@
       color: var(--color-base-content);
       @supports (color: color-mix(in lab, red, red)) {
         color: color-mix(in oklab, var(--color-base-content) 40%, transparent);
+      }
+      &::-moz-placeholder {
+        color: var(--color-base-content);
+        @supports (color: color-mix(in lab, red, red)) {
+          color: color-mix(in oklab, var(--color-base-content) 20%, transparent);
+        }
       }
       &::placeholder {
         color: var(--color-base-content);
@@ -1356,9 +1418,13 @@
     place-content: center;
     vertical-align: middle;
     webkit-user-select: none;
-    user-select: none;
+    -webkit-user-select: none;
+       -moz-user-select: none;
+            user-select: none;
     input {
-      appearance: none;
+      -webkit-appearance: none;
+         -moz-appearance: none;
+              appearance: none;
       border: none;
     }
     > * {
@@ -1404,7 +1470,8 @@
     img {
       height: 100%;
       width: 100%;
-      object-fit: cover;
+      -o-object-fit: cover;
+         object-fit: cover;
     }
   }
   .checkbox {
@@ -1416,7 +1483,9 @@
     display: inline-block;
     flex-shrink: 0;
     cursor: pointer;
-    appearance: none;
+    -webkit-appearance: none;
+       -moz-appearance: none;
+            appearance: none;
     border-radius: var(--radius-selector);
     padding: calc(0.25rem * 1);
     vertical-align: middle;
@@ -1490,7 +1559,9 @@
     display: inline-block;
     flex-shrink: 0;
     cursor: pointer;
-    appearance: none;
+    -webkit-appearance: none;
+       -moz-appearance: none;
+            appearance: none;
     border-radius: calc(infinity * 1px);
     padding: calc(0.25rem * 1);
     vertical-align: middle;
@@ -1547,7 +1618,9 @@
     position: relative;
     height: calc(0.25rem * 2);
     width: 100%;
-    appearance: none;
+    -webkit-appearance: none;
+       -moz-appearance: none;
+            appearance: none;
     overflow: hidden;
     border-radius: var(--radius-box);
     background-color: currentColor;
@@ -1624,7 +1697,9 @@
     border: var(--border) solid #0000;
     min-height: calc(0.25rem * 20);
     flex-shrink: 1;
-    appearance: none;
+    -webkit-appearance: none;
+       -moz-appearance: none;
+            appearance: none;
     border-radius: var(--radius-field);
     background-color: var(--color-base-100);
     padding-block: calc(0.25rem * 2);
@@ -1644,7 +1719,9 @@
       --input-color: color-mix(in oklab, var(--color-base-content) 20%, #0000);
     }
     textarea {
-      appearance: none;
+      -webkit-appearance: none;
+         -moz-appearance: none;
+              appearance: none;
       background-color: transparent;
       border: none;
       &:focus, &:focus-within {
@@ -1673,6 +1750,12 @@
       color: var(--color-base-content);
       @supports (color: color-mix(in lab, red, red)) {
         color: color-mix(in oklab, var(--color-base-content) 40%, transparent);
+      }
+      &::-moz-placeholder {
+        color: var(--color-base-content);
+        @supports (color: color-mix(in lab, red, red)) {
+          color: color-mix(in oklab, var(--color-base-content) 20%, transparent);
+        }
       }
       &::placeholder {
         color: var(--color-base-content);
@@ -1913,6 +1996,7 @@
     padding-block: calc(0.25rem * 2);
     > menu, > ul, > ol {
       display: flex;
+      min-height: -moz-min-content;
       min-height: min-content;
       align-items: center;
       white-space: nowrap;
@@ -2015,6 +2099,7 @@
     color: var(--badge-fg) !important;
     border: var(--border) solid var(--badge-color, var(--color-base-200)) !important;
     font-size: 0.875rem !important;
+    width: -moz-fit-content !important;
     width: fit-content !important;
     padding-inline: calc(0.25rem * 3 - var(--border)) !important;
     background-size: auto, calc(var(--noise) * 100%) !important;
@@ -2035,6 +2120,7 @@
     color: var(--badge-fg);
     border: var(--border) solid var(--badge-color, var(--color-base-200));
     font-size: 0.875rem;
+    width: -moz-fit-content;
     width: fit-content;
     padding-inline: calc(0.25rem * 3 - var(--border));
     background-size: auto, calc(var(--noise) * 100%);
@@ -2081,7 +2167,8 @@
     width: 100%;
     grid-auto-flow: row;
     place-items: start;
-    column-gap: calc(0.25rem * 4);
+    -moz-column-gap: calc(0.25rem * 4);
+         column-gap: calc(0.25rem * 4);
     row-gap: calc(0.25rem * 10);
     font-size: 0.875rem;
     line-height: 1.25rem;
@@ -2280,9 +2367,12 @@
   .mask {
     display: inline-block;
     vertical-align: middle;
-    mask-size: contain;
-    mask-repeat: no-repeat;
-    mask-position: center;
+    -webkit-mask-size: contain;
+            mask-size: contain;
+    -webkit-mask-repeat: no-repeat;
+            mask-repeat: no-repeat;
+    -webkit-mask-position: center;
+            mask-position: center;
   }
   .block {
     display: block;
@@ -2401,9 +2491,6 @@
   .items-center {
     align-items: center;
   }
-  .items-end {
-    align-items: flex-end;
-  }
   .items-start {
     align-items: flex-start;
   }
@@ -2422,20 +2509,11 @@
   .\!justify-evenly {
     justify-content: space-evenly !important;
   }
-  .\!justify-normal {
-    justify-content: normal !important;
-  }
   .\!justify-start {
     justify-content: flex-start !important;
   }
   .justify-center {
     justify-content: center;
-  }
-  .justify-end {
-    justify-content: flex-end;
-  }
-  .justify-normal {
-    justify-content: normal;
   }
   .justify-start {
     justify-content: flex-start;
@@ -2541,12 +2619,6 @@
   .text-center {
     text-align: center;
   }
-  .text-left {
-    text-align: left;
-  }
-  .text-right {
-    text-align: right;
-  }
   .align-text-bottom {
     vertical-align: text-bottom;
   }
@@ -2592,9 +2664,6 @@
   }
   .text-primary {
     color: var(--color-primary);
-  }
-  .text-white {
-    color: var(--color-white);
   }
   .capitalize {
     text-transform: capitalize;
@@ -2881,7 +2950,7 @@
 }
 @layer base {
   :root {
-    --fx-noise: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='a'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='1.34' numOctaves='4' stitchTiles='stitch'%3E%3C/feTurbulence%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23a)' opacity='0.2'%3E%3C/rect%3E%3C/svg%3E");
+    --fx-noise: url("data:image/svg+xml,%3Csvg xmlns=%27http://www.w3.org/2000/svg%27%3E%3Cfilter id=%27a%27%3E%3CfeTurbulence type=%27fractalNoise%27 baseFrequency=%271.34%27 numOctaves=%274%27 stitchTiles=%27stitch%27%3E%3C/feTurbulence%3E%3C/filter%3E%3Crect width=%27100%25%27 height=%27100%25%27 filter=%27url%28%23a%29%27 opacity=%270.2%27%3E%3C/rect%3E%3C/svg%3E");
   }
 }
 @layer base {
@@ -3165,4 +3234,4 @@
       --tw-drop-shadow-size: initial;
     }
   }
-}
+} 
