--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,7 +1,13 @@
+
 @import "fonts.css";
 @import "base.css";
 @import "header-footer.css";
 @import "bricks.css";
+@import "lightbox.css";
+@import "intersectionobserver.css";
+@import "date-icons.css";
+@import "volunteer-form.css";
+@import "customcursor.css";
 @import "waterway-cleanups.css";
 
 /*------------------------*/
