--- a/static/css/tailwind-output.css
+++ b/static/css/tailwind-output.css
@@ -1,6 +1,6 @@
-/*!*************************************************************************************************************************!*\
-  !*** css ./node_modules/css-loader/dist/cjs.js!./node_modules/postcss-loader/dist/cjs.js!./static/css/src/tailwind.css ***!
-  \*************************************************************************************************************************/
+/*!*****************************************************************************************************************************************************!*\
+  !*** css ./node_modules/css-loader/dist/cjs.js!./node_modules/postcss-loader/dist/cjs.js??ruleSet[1].rules[1].use[2]!./static/css/src/tailwind.css ***!
+  \*****************************************************************************************************************************************************/
 /*! tailwindcss v4.1.8 | MIT License | https://tailwindcss.com */
 @layer properties;
 @layer theme, base, components, utilities;
