--- a/static/css/src/tailwind.css
+++ b/static/css/src/tailwind.css
@@ -1,4 +1,5 @@
+/* Base Tailwind import */
 @import "tailwindcss";
-@plugin "daisyui";
 
-/* Custom styles can go here */ 
+/* Import DaisyUI properly */
+@plugin "daisyui";
