--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,64 +1,1 @@
-@import "fonts.css";
-@import "base.css";
-@import "header-footer.css";
-@import "bricks.css";
-@import "waterway-cleanups.css";
-
-/*------------------------*/
-/* theme colors
-/*------------------------*/
-
-:root {
-    --textDarker: rgba(47, 46, 42, 0.9);
-    --textDark: rgba(47, 46, 42, 0.9);
-    --textMedium: rgba(47, 46, 42, 0.9);
-    --borderMedium: rgba(38, 50, 56, 0.2); 
-    --borderLight: rgba(38, 50, 56, 0.075);
-
-    --accent: #b9e597;
-    --accentDarker: #58b093;
-    --light: rgba(38, 50, 56, 0.035);
-    --teal-blue: #043C58;
-    --eden-green: #0E4D3B;
-    --genoa-green: #198562;
-    --granny-smith-apple-green: #B9E597;
-    --pearl-bush-white: #EAE4D7;
-    --silver-tree-green: #C8D6B9;
-    --white: #FFFFFF;
-}
-/*------------------------*/
-/* turn grayscale off
-/*------------------------*/
-
-img {filter: grayscale(0);}
-
-/*------------------------*/
-/* colorize_image
-/*------------------------*/
-
-.colorize_image {filter: contrast(1) sepia(1) hue-rotate(160deg) grayscale(0.8)!important;}
-
-/*------------------------*/
-/* black_2_textDark
-/*------------------------*/
-
-.map:not(section)::after, .black_2_textDark {filter: contrast(0.7) sepia(1) hue-rotate(160deg)!important;}
-
-/*------------------------*/
-/* black_2_textMedium
-/*------------------------*/
-
-.black_2_textMedium {filter: contrast(0.3) sepia(0.3) hue-rotate(160deg) brightness(1.4)!important;}
-
-/*------------------------*/
-/* black_2_accent
-/*------------------------*/
-
-.black_2_accent {filter: contrast(0.11) sepia(1) hue-rotate(340deg) contrast(13)!important;}
-
-
-/*------------------------ CSS overrides below ------------------------*/
-
-section.two-columns-section {
-    padding-top: 5rem;
- }
+@import "fonts.css";@import "base.css";@import "header-footer.css";@import "bricks.css";@import "lightbox.css";@import "intersectionobserver.css";@import "date-icons.css";@import "volunteer-form.css";@import "customcursor.css";@import "waterway-cleanups.css";:root{--textDarker:rgba(47,46,42,.9);--textDark:rgba(47,46,42,.9);--textMedium:rgba(47,46,42,.9);--borderMedium:rgba(38,50,56,.2);--borderLight:rgba(38,50,56,.075);--accent:#b9e597;--accentDarker:#58b093;--light:rgba(38,50,56,.035);--teal-blue:#043c58;--eden-green:#0e4d3b;--genoa-green:#198562;--granny-smith-apple-green:#b9e597;--pearl-bush-white:#eae4d7;--silver-tree-green:#c8d6b9;--white:#fff}img{filter:grayscale(0)}.colorize_image{filter:contrast(1) sepia(1) hue-rotate(160deg) grayscale(.8)!important}.black_2_textDark,.map:not(section):after{filter:contrast(.7) sepia(1) hue-rotate(160deg)!important}.black_2_textMedium{filter:contrast(.3) sepia(.3) hue-rotate(160deg) brightness(1.4)!important}.black_2_accent{filter:contrast(.11) sepia(1) hue-rotate(340deg) contrast(13)!important}section.two-columns-section{padding-top:5rem}
