--- a/layouts/partials/head_custom.html
+++ b/layouts/partials/head_custom.html
@@ -13,3 +13,13 @@
 
 <!-- Volunteer Form Handler -->
 <script src="/js/volunteer-form-handler.js"></script>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Q0NR461DCS"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-Q0NR461DCS');
+</script>
