Enable debug mode

--- a/layouts/partials/head_custom.html
+++ b/layouts/partials/head_custom.html
@@ -21,7 +21,7 @@
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-Q0NR461DCS');
+  gtag('config', 'G-Q0NR461DCS', { 'debug_mode':true });
 </script>
 
 <!-- Google Tag Manager -->
